iniciando formulario de noticias

--- a/app/views/noticias/noticia.ejs
+++ b/app/views/noticias/noticia.ejs
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
-	<html lang="pt-br">
-		<head>
-			<meta charset="utf-8"/>
-			<title>Portal de notÌcias</title>
-		</head>
-	<body>
+<html lang="pt-br">
 
-		<h1>NotÌcia</h1>
+<head>
+	<meta charset="utf-8" />
+	<title>Not√≠cia</title>
+</head>
 
-	</body>
+<body>
+
+	<h1>Not√≠cia</h1>
+
+	<table>
+		<tr>
+			<th>Id</td>
+			<th>Titulo</td>
+			<th>Not√≠cia</td>
+		</tr>
+
+		<tr>
+			<td><%= noticia[0].id_noticia %></td>
+			<td><%= noticia[0].titulo %></td>
+			<td><%= noticia[0].noticia %></td>
+		</tr>
+
+	</table>
+
+</body>
+
 </html>
