--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -12,6 +12,15 @@
 			<label for="titulo">Título</label>
 			<input type="text" id="titulo" name="titulo" placeholder="Título da Notícia" />
 			<br/>
+			<label for="resumo">Resumo</label>
+			<input type="text" id="resumo" name="resumo" placeholder="Resumo da Notícia" />
+			<br/>
+			<label for="autor">Autor</label>
+			<input type="text" id="autor" name="autor" placeholder="Autor da Notícia" />
+			<br/>
+			<label for="data">Data da Notícia</label>
+			<input type="date" id="data_noticia" name="data_noticia" placeholder="Data da Notícia" />
+			<br/>
 			<label for="noticia">Notícia</label>
 			<textarea id="noticia" name="noticia" rows="5" cols="30"></textarea>
 			<br/>
