--- a/app/views/noticias/noticia.ejs
+++ b/app/views/noticias/noticia.ejs
@@ -1,30 +1,67 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="pt-br">
+	<head>
+		<meta charset="UTF-8">
 
-<head>
-	<meta charset="utf-8" />
-	<title>Notícia</title>
-</head>
+		<title>Portal de notícias</title>
+		
+		<!-- JQuery -->
+		<script src="js/jquery-2.2.1.js"></script>
 
-<body>
+		<!-- bootstrap - link cdn -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	
+		<!-- incluindo css -->
+		<link href="css/style.css" rel="stylesheet">
 
-	<h1>Notícia</h1>
+		<!-- favicon -->
+		<link rel="shortcut icon" href="images/favicon.ico" />
+	</head>
 
-	<table>
-		<tr>
-			<th>Id</td>
-			<th>Titulo</td>
-			<th>Notícia</td>
-		</tr>
+	<body>
 
-		<tr>
-			<td><%= noticia[0].id_noticia %></td>
-			<td><%= noticia[0].titulo %></td>
-			<td><%= noticia[0].noticia %></td>
-		</tr>
+		<nav class="navbar navbar-default navbar-static-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					
+					<img src="images/logo.png" />
+				</div>
 
-	</table>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="/">HOME</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
-</body>
 
+	    <div class="container">
+	    	<div class="row">
+	    		<div class="col-md-12">
+	    			<div class="noticia_wrapper">
+		    			<span class="noticia_autor"><%= noticia[0].autor %></span>
+		    			<a href="noticia/1" class="noticia_titulo"><%= noticia[0].titulo %></a>
+		    			<span class="noticia_data"><%= noticia[0].data_noticia %></span>
+		    			<br />
+		    			<p class="noticia_resumo">
+		    				<%= noticia[0].resumo %>
+		    			</p>
+		    			<p class="noticia_noticia">
+		    				<%= noticia[0].noticia %>
+		    			</p>
+		    		</div>
+		    	</div>
+	    	</div>
+	    </div>
+	
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	
+	</body>
 </html>
