--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -32,8 +32,9 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-
-				<img src="images/logo.png" />
+				<a href="/">
+					<img src="images/logo.png" />
+				</a>
 			</div>
 
 			<div id="navbar" class="navbar-collapse collapse">
@@ -93,6 +94,7 @@
 
 		<div class="row ver_mais">
 			<button type="button" class="btn btn-default"><a href="noticias">Ver todas as notícias</a></button>
+			<button type="button" class="btn btn-default"><a href="/form_inclusao_noticia">Adicionar notícia</a></button>
 		</div>
 
 	</div>
