--- a/app/views/noticias/noticias.ejs
+++ b/app/views/noticias/noticias.ejs
@@ -30,7 +30,9 @@
 						<span class="icon-bar"></span>
 					</button>
 					
-					<img src="images/logo.png" />
+					<a href="/">
+						<img src="images/logo.png" />
+					</a>
 				</div>
 
 				<div id="navbar" class="navbar-collapse collapse">
