configurações para deploy

--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -93,6 +93,7 @@
 
 		<div class="row ver_mais">
 			<button type="button" class="btn btn-default"><a href="noticias">Ver todas as notícias</a></button>
+			<button type="button" class="btn btn-default"><a href="form_inclusao_noticia">Incluir notícia</a></button>
 		</div>
 
 	</div>
